css/page.workingfile.css
/* ... */
#main-content > header {
  margin: 0;
}
.field-name-field-list-page-image + .field-name-body h1,
.field-name-field-list-page-image + .field-name-body h2,
.field-name-field-list-page-image + .field-name-body h3,
.field-name-field-list-page-image + .field-name-body h4,
.field-name-field-image + .field-name-body h1,
.field-name-field-image + .field-name-body h2,
.field-name-field-image + .field-name-body h3,
.field-name-field-image + .field-name-body h4 {
  margin-top: 1em;
}
.region-sidebar-first {
  margin-left: 0 !important;
}
.sidebar-first .content-inner,
.two-sidebars .content-inner {
  margin: 0 !important;
}
.field-name-body {
  margin-right: 2.5%;
}
.two-sidebars .field-name-field-list-page-image,
.two-sidebars .field-name-field-image {
  margin-right: 2%;
}
#main-content,
.one-sidebar #main-content {
  margin-top: 2%;
}
.sidebar-first #main-content {
  margin-right: 0;
  margin-left: 2%;
}
#page-title {
  font-size: 21px;
  font-size: 2.1rem;
  margin-bottom: .5em;
  padding-bottom: .5em;
  border-bottom: 1px solid #e1dfdd;
}
.float-left {
  float: left;
  width: 48%;
  margin-right: 20px;
}
.float-right {
  float: right;
}
.field-name-field-page-image {
  margin: 0 10px 20px 0;
}
.teaser .field-name-field-page-image {
  margin: 0;
}
.teaser {
  margin-bottom: 10px;
  margin-top: 10px;
}
.teaser .article-content {
  margin: 10px;
}
.teaser .field-type-image {
  float: left;
  padding: 10px;
  padding-right: 20px;
}
.teaser .article-title {
  padding: 10px 0 10px 0;
}
.teaser h3.article-title {
  margin-top: 10px;
}
.teaser p:first-of-type {
  margin-top: 0;
}
.teaser .staff-image {
  padding: 0;
  padding-right: 18px;
}
.field-name-body img {
  border: 5px solid #e6e4e2;
  margin: 10px;
}
.field-name-body .img_normal {
  float: none;
  margin-left: 0;
}

.field-name-body .no_border { border: none}
.field-name-body .img_left_free,
.field-name-body .img_right_free,
.field-name-body .img_normal {
  max-width: 100%;
}
.field-name-field-portrait-image,
.field-name-body .img_left,
.field-name-body .img_left_free {
  float: left;
  margin: 10px;
  margin-left: 0;
  margin-right: 20px;
}
.field-name-body .img_right,
.field-name-body .img_right_free {
  float: right;
  margin-right: 0;
  margin-left: 20px;
}
.field-name-body .img_left,
.field-name-body .img_right {
  max-width: 250px;
  width: auto;
}
.field-name-body .img_center {
  float: none;
  display: block;
  margin: 10px auto;
  margin-left: auto;
  margin-right: auto;
}
.teaser .field-name-field-portrait-image {
  margin: 0;
}
.field-label-inline .field-items {
  line-height: 20px;
}
.article-type-person .group-left {
  margin-right: 20px;
  width: auto;
}
.article-type-person .group-right {
  float: left;
  margin: 0 0 0 0;
  width: auto;
  max-width: 520px;
}
.view-contact-info .views-row,
.view-teaching-technichians .views-row,
.view-administration .views-row {
  margin-bottom: 20px;
  border-bottom: 1px dashed #ccc;
  height: 160px;
}
/*

//future development for when we implement larger portrait image on person's profile
// override 

      .mydepartment .article-type-person .group-right {
        max-width: 490px;
        }

*/
.group-right .field .field-label,
.group_q_a span {
  font-size: 16px;
  font-size: 1.6rem;
}
.group_q_a span {
  font-weight: bold;
}
.field-name-field-program .field-label,
.field-name-field-education .field-label {
  font-size: 16px;
  font-size: 1.6rem;
}
.article-type-person ul li,
.article-type-page ul li,
#block-views-faq-block ul li,
.article-type-person ol li,
.article-type-page ol li,
#block-views-faq-block ol li {
  line-height: 1.5em;
  list-style-position: outside;
  margin-left: .5em;
  padding-bottom: .2em;
}
.field-name-field-building .field-items,
.field-name-field-room .field-items,
.field-name-field-building,
.field-name-field-room,
.field-name-field-building .field-item,
.field-name-field-room .even {
  display: inline;
}
.field-name-field-affiliations {
  margin-top: 20px;
}
.group-right .field-type-text-long,
.group-right .field-name-field-cvs-resume,
.group-right .field-name-field-cv-resume {
  border-bottom: 1px solid #cccccc;
  padding: 1.4em 0;
  font-weight: normal;
}
.group-right .field-name-field-faculty-video {
  padding: 0.4em 0;
}
.group-right .field-name-field-status h2.field-label,
.group-right .field-name-field-availability h2.field-label {
  font-family: arial;
  font-size: 15px;
  font-size: 1.5rem;
  color: #333333;
}
.field-name-field-job-title .field-item {
  font-size: 16px;
  font-size: 1.6rem;
  font-weight: bold;
}
.group-right .field-name-field-status {
  margin-top: 0;
}
.group-right .field-name-field-video {
  margin-top: 20px;
}
.group-right .group-main-info {
  border-bottom: 1px dashed #cccccc;
  padding-bottom: 10px;
  margin-bottom: 10px;
}
.group_q_a,
.field-name-field-question,
.field-name-field-question-2,
.field-name-field-question-3 {
  margin-top: 20px;
}
ul.info {
  margin: 0;
  padding: 0;
  font-size: 14px;
  font-size: 1.4rem;
  list-style-type: none;
}
#block-views-news-block,
#block-views-events-block {
  float: left;
  margin-right: 3.2%;
  width: 230px;
}
#block-views-news-block .block-title,
#block-views-events-block .block-title {
  font-weight: bold;
  font-size: 18px;
  font-size: 1.8rem;
  margin-bottom: 5px;
  background: #4d6d92;
  padding: 8px;
  color: #ffffff;
}
.view-news .views-row,
.view-id-events .views-row {
  border-bottom: 1px solid #cccccc;
  padding: 20px 0 20px 0;
  height: 40px;
  border-bottom: 1px dashed #666666;
}
/* ... */

